create dog and show the dog

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,14 @@ services:
           dockerfile: Dockerfile
         ports:
           - "8080:80"
-        depends_on:
-          - db
+    #     depends_on:
+    #       - db
 
-    db:
-        image: "mcr.microsoft.com/mssql/server:2022-latest"
-        ports:
-          - "1433:1433"
+    # db:
+    #     image: "mcr.microsoft.com/mssql/server:2022-latest"
+    #     ports:
+    #       - "1433:1433"
 
-        environment:
-            SA_PASSWORD: "S3cur3P@ssW0rd!"
-            ACCEPT_EULA: "Y"
+    #     environment:
+    #         SA_PASSWORD: "S3cur3P@ssW0rd!"
+    #         ACCEPT_EULA: "Y"
